Minor changes - Global results - Fixed scale for polarity - Reduced z-index for the background graph

--- a/css/graph.css
+++ b/css/graph.css
@@ -1,4 +1,5 @@
 canvas#spiders {
   height:100vh;
   position: fixed;
+  z-index: -1;
 }
